--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/burgers.html">The Best Burgers in North Carolina!</a>
 </body>
 </html>
