--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/burgers.html">The Best Burgers in North Carolina!</a>
+    <a href="recipes/rice.html">Delicious fried rice.</a>
+    <a href="recipes/FriedChicken.html">Delicious fried rice.</a>
 </body>
 </html>
