Added links to an OL.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/burgers.html">The Best Burgers in North Carolina!</a>
-    <a href="recipes/rice.html">Delicious fried rice.</a>
-    <a href="recipes/FriedChicken.html">Delicious fried rice.</a>
+    <ol>
+        <li><a href="recipes/burgers.html">The Best Burgers in North Carolina!</a></li>
+        <li><a href="recipes/rice.html">Delicious fried rice.</a></li>  
+    </ol>
 </body>
 </html>
